# memory-passport

./: .env.example  .gitattributes  .gitignore  .gitmodules  B2B_CUSTOMER_GUIDE.zh-CN.md  CLAUDE.md  CUSTOMER_QUICKSTART.zh-CN.md  Makefile  README.md  docker-compose.real.yml  docker-compose.tls.yml  docker-compose.yml  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
backend/: .dockerignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_audit_actions.py  0003_memory_mapping_and_traces.py  0004_audit_actions_v2.py  0005_migration_lifecycle.py  0006_usage_events.py  0007_exports_user_deletion.py  0008_export_token_plaintext.py  0009_tenant_hms_credentials.py  0010_validation_remediation.py  0011_operator_rbac.py  0012_webhooks.py
backend/app/: __init__.py  config.py  demo_hms.py  main.py
backend/app/api/: __init__.py  deps.py  errors.py  health.py
backend/app/auth/: __init__.py
backend/app/db/: __init__.py  base.py  (+1 more)
backend/tests/: conftest.py  service_dependencies.py  test_aggregates.py  test_auth.py  test_consent.py  test_console_apps.py  test_console_schema.py  test_cors.py  test_data_ops.py  test_demo_hms.py  test_health.py  test_hms_client.py  test_ingest.py  test_ingest_smoke.py  test_memory_crud.py  test_migration_wedge.py  test_migrations.py  test_multi_tenant_hms.py  test_policies.py  test_provisioning.py  test_rbac.py  test_real_hms_config.py  test_retrieve.py  test_seed.py  test_smoke.py  test_team.py  test_trace_feedback.py  test_webhooks.py  test_wipe.py
(+190 files in other folders)
