[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mp-backend"
version = "0.1.0"
description = "Memory Passport backend — FastAPI domain service wrapping the HMS memory engine."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  # Web framework
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  # DB
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.3",
  "alembic>=1.14.0",
  # Config / HTTP / utils
  "pydantic-settings>=2.6.1",
  "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0",
  "respx>=0.22.0",
  "ruff>=0.8.4",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
  "postgres: requires a reachable PostgreSQL service",
  "hms: requires a reachable HMS HTTP service",
  "compose: exercises the complete Docker Compose stack",
]
filterwarnings = [
  "ignore:Using .*starlette.testclient.*:starlette.exceptions.StarletteDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Source-data transcriptions — one row per line is more readable than wrapping.
"app/seed/data.py" = ["E501"]
# Enums use ``class Foo(str, enum.Enum)`` (explicit, well-documented form) rather
# than ``enum.StrEnum`` — both are valid on py3.11; we keep the explicit form.
"app/models/enums.py" = ["E501", "UP042"]
